[metadata]
name = sphynx
version = 0.0.3
author = Senyo Simpson
author_email = simpsonsenyo@gmail.com
description = A wrapper around structlog with nice defaults
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senyosimpson/sphynx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    structlog >=21.1.0,<22.0.0
    python-json-logger >=2.0.1,<3.0.0
